# fastapi-batch

./: .dockerignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/: workflow.yml
.github/workflows/: publish.yml
example/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml
example/models/: __init__.py  animal_model.py  fruit_model.py
src/fastapi_batch/: __init__.py  gateway.py
src/fastapi_batch/models/: __init__.py  batch_model.py  batch_request.py  batch_response.py  http_methods.py
