[project]
name = "fastapi-batch"
version = "1.0.0"
description = "FastAPI dependency for batch requesting"
readme = "README.md"
authors = [
    { name = "Sarbagya Dhaubanjar", email = "sarbagyastha@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "asyncer>=0.0.8",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
]


[project.urls]
Homepage = "https://github.com/sarbagyastha/fastapi-batch"
Documentation = "https://github.com/sarbagyastha/fastapi-batch/blob/main/README.md"
Repository = "https://github.com/sarbagyastha/fastapi-batch"
Issues = "https://github.com/sarbagyastha/fastapi-batch/issues"
Changelog = "https://github.com/sarbagyastha/fastapi-batch/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
