[project]
name = "fastapi-batch-example"
version = "0.1.0"
description = "Example of FastAPI with batch requesting"
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "fastapi-batch",
]


[tool.uv.sources]
fastapi-batch = { path = "src/fastapi_batch" }
